apps/whisparr/overlays/nishir/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  namespace: shikanime
spec:
  template:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - jellyfin
                topologyKey: kubernetes.io/hostname
