apps/whisparr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: whisparr
spec:
  template:
    spec:
      containers:
        - name: whisparr
          volumeMounts:
            - name: sukebe-scenes-data
              mountPath: /data/scenes
            - name: downloads-data
              mountPath: /downloads
      volumes:
        - name: sukebe-scenes-data
          persistentVolumeClaim:
            claimName: sukebe-scenes-data
        - name: downloads-data
          persistentVolumeClaim:
            claimName: downloads-data
