apps/whisparr/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisparr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: whisparr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: https
          protocol: TCP
